# petri

./: .gitignore  LICENSE  Makefile  README.md  cabal.project  flake.nix  hie.yaml  package-lock.json  package.json  petri.cabal
.github/workflows/: CI.yaml
petri-frontend/: index.html  package-lock.json  package.json  tsconfig.node.json
petri-frontend/spec/: Spec.md
petri-frontend/src/: App.tsx  index.css  main.tsx
petri-frontend/src/ControlButtons/: MkPlace.tsx  MkTransition.tsx
petri-frontend/src/Edges/: CustomConnectionLine.tsx  FloatingEdge.tsx
petri-frontend/src/Nodes/: Place.tsx  Transition.tsx
petri-frontend/src/Sidebar/: Sidebar.tsx
src/Data/: Petri.hs
src/Data/Petri/: CE.hs  Set.hs
src/Data/Petri/Types/: FlowRelation.hs  Net.hs  Place.hs  Transition.hs
src/Data/Petri/Validation/: FlowRelation.hs
test/: Spec.hs
testlib/: Samples.hs
