cabal-version:   3.6
name:            petri
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Peter Dragos
maintainer:      Peter Dragos <15849936+dragospe@users.noreply.github.com>
copyright:       2025 Peter Dragos
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/petri#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/petri.git

-- Usage: cabal build -fdevelopment
flag development
  description: Disable -Werror during development mode
  default:     False
  manual:      True

common common
  build-depends:      base >=4.9 && <5
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , data-default
    , deriving-aeson
    , directory
    , filepath
    , lens
    , mtl
    , pretty-show
    , prettyprinter
    , text
    , vector

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds
    -Wredundant-constraints -Widentities -Wpartial-fields
    -fwarn-unused-imports -Wmissing-home-modules

  if !flag(development)
    ghc-options: -Werror

library
  import:          common
  hs-source-dirs:  src
  exposed-modules: Lib

executable petri-exe
  import:         common
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  petri
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite petri-test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , petri
    , QuickCheck
    , tasty
    , tasty-hunit

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark petri-bench
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , petri

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
