cabal-version:   3.6
name:            petri
version:         0
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       2025 Peter Dragos
maintainer:      Peter Dragos <15849936+dragospe@users.noreply.github.com>
author:          Peter Dragos
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

flag development
    description: Disable -Werror during development mode
    default:     False
    manual:      True

library
    exposed-modules:
        Data.Petri.Set
        Data.Petri.Types.FlowRelation
        Data.Petri.Types.Net
        Data.Petri.Types.Place
        Data.Petri.Types.Transition
        Data.Petri.Validation.FlowRelation
        Data.Petri

    hs-source-dirs:     src
    default-language:   GHC2021
    default-extensions:
        NoImplicitPrelude BangPatterns BinaryLiterals ConstraintKinds
        DataKinds DeriveFunctor DeriveGeneric DeriveTraversable
        DerivingStrategies DerivingVia DuplicateRecordFields EmptyCase
        FlexibleContexts FlexibleInstances GADTs GeneralizedNewtypeDeriving
        HexFloatLiterals ImportQualifiedPost InstanceSigs KindSignatures
        LambdaCase MultiParamTypeClasses NumericUnderscores
        OverloadedStrings ScopedTypeVariables StandaloneDeriving
        TupleSections TypeApplications TypeOperators TypeSynonymInstances
        UndecidableInstances

    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
        -Wno-partial-type-signatures -Wmissing-export-lists
        -Wincomplete-record-updates -Wmissing-deriving-strategies
        -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
        -fprint-explicit-kinds -Wredundant-constraints -Widentities
        -Wpartial-fields -fwarn-unused-imports -Wmissing-home-modules

    build-depends:
        base >=4.9 && <5,
        aeson,
        base,
        bytestring,
        containers,
        data-default,
        deriving-aeson,
        directory,
        filepath,
        lens,
        row-types,
        mtl,
        pretty-show,
        prettyprinter,
        text,
        vector

    if !flag(development)
        ghc-options: -Werror

executable petri-exe
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   GHC2021
    default-extensions:
        NoImplicitPrelude BangPatterns BinaryLiterals ConstraintKinds
        DataKinds DeriveFunctor DeriveGeneric DeriveTraversable
        DerivingStrategies DerivingVia DuplicateRecordFields EmptyCase
        FlexibleContexts FlexibleInstances GADTs GeneralizedNewtypeDeriving
        HexFloatLiterals ImportQualifiedPost InstanceSigs KindSignatures
        LambdaCase MultiParamTypeClasses NumericUnderscores
        OverloadedStrings ScopedTypeVariables StandaloneDeriving
        TupleSections TypeApplications TypeOperators TypeSynonymInstances
        UndecidableInstances

    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
        -Wno-partial-type-signatures -Wmissing-export-lists
        -Wincomplete-record-updates -Wmissing-deriving-strategies
        -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
        -fprint-explicit-kinds -Wredundant-constraints -Widentities
        -Wpartial-fields -fwarn-unused-imports -Wmissing-home-modules
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.9 && <5,
        aeson,
        base,
        bytestring,
        containers,
        data-default,
        deriving-aeson,
        directory,
        filepath,
        lens,
        row-types,
        mtl,
        pretty-show,
        prettyprinter,
        text,
        vector,
        petri

    if !flag(development)
        ghc-options: -Werror

test-suite petri-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    default-language:   GHC2021
    default-extensions:
        NoImplicitPrelude BangPatterns BinaryLiterals ConstraintKinds
        DataKinds DeriveFunctor DeriveGeneric DeriveTraversable
        DerivingStrategies DerivingVia DuplicateRecordFields EmptyCase
        FlexibleContexts FlexibleInstances GADTs GeneralizedNewtypeDeriving
        HexFloatLiterals ImportQualifiedPost InstanceSigs KindSignatures
        LambdaCase MultiParamTypeClasses NumericUnderscores
        OverloadedStrings ScopedTypeVariables StandaloneDeriving
        TupleSections TypeApplications TypeOperators TypeSynonymInstances
        UndecidableInstances

    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
        -Wno-partial-type-signatures -Wmissing-export-lists
        -Wincomplete-record-updates -Wmissing-deriving-strategies
        -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
        -fprint-explicit-kinds -Wredundant-constraints -Widentities
        -Wpartial-fields -fwarn-unused-imports -Wmissing-home-modules
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.9 && <5,
        aeson,
        base,
        bytestring,
        containers,
        data-default,
        deriving-aeson,
        directory,
        filepath,
        lens,
        row-types,
        mtl,
        pretty-show,
        prettyprinter,
        text,
        vector,
        petri,
        QuickCheck,
        tasty,
        tasty-hunit

    if !flag(development)
        ghc-options: -Werror

benchmark petri-bench
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     bench
    default-language:   GHC2021
    default-extensions:
        NoImplicitPrelude BangPatterns BinaryLiterals ConstraintKinds
        DataKinds DeriveFunctor DeriveGeneric DeriveTraversable
        DerivingStrategies DerivingVia DuplicateRecordFields EmptyCase
        FlexibleContexts FlexibleInstances GADTs GeneralizedNewtypeDeriving
        HexFloatLiterals ImportQualifiedPost InstanceSigs KindSignatures
        LambdaCase MultiParamTypeClasses NumericUnderscores
        OverloadedStrings ScopedTypeVariables StandaloneDeriving
        TupleSections TypeApplications TypeOperators TypeSynonymInstances
        UndecidableInstances

    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
        -Wno-partial-type-signatures -Wmissing-export-lists
        -Wincomplete-record-updates -Wmissing-deriving-strategies
        -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
        -fprint-explicit-kinds -Wredundant-constraints -Widentities
        -Wpartial-fields -fwarn-unused-imports -Wmissing-home-modules
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.9 && <5,
        aeson,
        base,
        bytestring,
        containers,
        data-default,
        deriving-aeson,
        directory,
        filepath,
        lens,
        row-types,
        mtl,
        pretty-show,
        prettyprinter,
        text,
        vector,
        criterion,
        petri

    if !flag(development)
        ghc-options: -Werror
